--- a/src/components/empleado/CreacionEmpleado/infoPrincipal/infoPrincipal.css
+++ b/src/components/empleado/CreacionEmpleado/infoPrincipal/infoPrincipal.css
@@ -1,21 +1,16 @@
 .inputs {
-    font-size: 14px;
-    padding: 4rem;
+    font-size: 14px !important;
+    padding: 4rem !important;
+    border-radius: 10px !important;
+    margin-bottom: 1rem !important;
+}
+
+.cardInfoPricipal{
     border-radius: 10px;
-    margin-bottom: 1rem;
-}
-
-.field-radiobutton {
-    margin-bottom: 1rem;
-    display: flex;
-    align-items: center;
-}
-
-.itemsdf {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    height: 30%;
-    width: 50%;
-    margin: -15% 0 0 -25%;
+    background-color: white;
+    border: 1px solid gainsboro;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 1rem !important;
+    padding-top: 3rem !important;
 }
