--- a/src/components/empleado/listado/listado.css
+++ b/src/components/empleado/listado/listado.css
@@ -50,3 +50,10 @@
     background-color: #FFCDD2;
     color: #C63737;
 }
+
+.centrar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
